# adsp.basic

./: .gitignore  CMakeLists.txt
adsp.basic/resources/language/English/: strings.po
adsp.basic/resources/skins/Confluence/720p/: DialogSpeakerGain.xml
debian/: changelog  changelog.in  control  copyright  rules
depends/common/libsamplerate/: CMakeLists.txt
src/: AudioDSPBasic.cpp  AudioDSPBasic.h  AudioDSPSettings.cpp  AudioDSPSettings.h  AudioDSPSoundTest.cpp  AudioDSPSoundTest.h  DSPProcessMaster.cpp  DSPProcessMaster.h  GUIDialogSpeakerDistance.cpp  GUIDialogSpeakerDistance.h  GUIDialogSpeakerGain.cpp  GUIDialogSpeakerGain.h  PinkNoise.h  client.cpp  client.h
src/Process_Stereo/: DSPProcessStereo.cpp  DSPProcessStereo.h
src/filter/: complex.cpp  delay.cpp  delay.h
